# universal-gui

./: README.md
.bak/inc/: UVGUI.h  UVGUI_Ascii_Code_Tab.h  ug_area.h  ug_color.h  ug_draw_rect.h  ug_obj.h
.bak/src/: ug_color.c  ug_disp.c  ug_draw_rect.c  ug_label.c  ug_obj.c
.bak/src/bak/ug_core/: UVGUI.c  ug_disp.h  ug_obj.c  ug_refr.c
.bak/src/bak/ug_draw/: ug_draw_elements.c  ug_draw_elements.h
.bak/src/bak/ug_misc/: ug_area.h  ug_color.h  ug_ll.h  ug_mem.h  ug_task.c
.bak/src/bak/ug_widgets/: ug_label.c  ug_label.h
.bak/ugfontV1.0.0/: ug_font_consolas_16px_15.c  ugfont.c  ugfont.h
.bak/user/: ug_port.c  ug_port.h  ug_user_config.h
example_kiteV1/: build_log.txt  kiteV1.code-workspace
example_kiteV1/.bak/: CMakeLists.txt
example_kiteV1/.bak/inc/: ug_disp.h
example_kiteV1/.bak/src/: UVGUI.c  ug_disp.c  ug_obj.c  ug_refr.c
example_kiteV1/.bak/user/: ug_port.c  ug_user_config.h
example_kiteV1/components/lcd/: lcd_st7735s.c  lcd_st7735s.h
example_kiteV1/components/ugui/: CMakeLists.txt  component.mk
example_kiteV1/components/ugui/inc/: ug_ll.h  ug_main.h  ug_mem.h  ug_obj.h
example_kiteV1/components/ugui/src/core/: ug_draw_rect.c  ug_refr.c
example_kiteV1/components/ugui/user/: ug_port.c  ug_user_config.h
example_kiteV1/main/: main.c
inc/: ug_disp.h  ug_obj.h  ug_refr.h  ug_type.h
src/core/: ug_disp.c  ug_main.c  ug_refr.c
user/: ug_port.c
user_templete/: main.c  ug_port.c  ug_user_config.h
